--- a/WS7/Workshop07.html
+++ b/WS7/Workshop07.html
@@ -1,91 +1,281 @@
 <!DOCTYPE html>
-<HTML lang="fi">
+<html lang="fi">
+  <head>
+    <meta charset="utf-8" />
+    <title>Työpaja 7</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-<head>
-	<meta charset="utf-8">
-	<title>Työpaja 7</title>
-	<link rel="stylesheet" href="css/styles.css">
-</head>
+  <body class="ws8">
+    <h1>Työpaja 7: JSON/XML:n parsiminen AJAXilla</h1>
+    <hr />
+    <p>
+      Tässä harjoituksessa harjoittelemme JSONin käyttöä
+      JavaScript-sovelluksissa. Käytä luentomateriaalia rinnalla viitteenä
+      näiden tehtävien aikana.
+    </p>
 
-<body class="ws8">
-	<h1>Työpaja 7: JSON/XML:n parsiminen AJAXilla</h1>
-	<hr />
-	<p>Tässä harjoituksessa harjoittelemme JSONin käyttöä JavaScript-sovelluksissa. Käytä luentomateriaalia rinnalla
-		viitteenä näiden tehtävien aikana.</p>
+    <hr />
+    <h2>Harjoitus 1: JSONin perusteet</h2>
+    <p>
+      JSON tarkoittaa JavaScript Object Notationia, ja se tarkoittaa, että
+      esittelemme datan muodossa, jonka JavaScript ymmärtää sellaisenaan.
+      Muunnoksia ei tarvita sen käyttämiseen.
+    </p>
+    <p>
+      <button onclick="naytaNimet()">Näytä vain etu- ja sukunimi</button>
+      <button onclick="naytaKaikki()">Näytä kaikki tiedot</button>
+    </p>
+    <p>
+      Kokeillaan seuraavaa. Voit luoda uuden JSON-datasetin
+      JavaScript-koodissasi alla olevan mallin mukaisesti. Luo sitten funktiot,
+      jotka suoritetaan, kun painikkeita klikataan.
+    </p>
 
-	<hr />
-	<h2>Harjoitus 1: JSONin perusteet</h2>
-	<p>JSON tarkoittaa JavaScript Object Notationia, ja se tarkoittaa, että esittelemme datan muodossa, jonka JavaScript
-		ymmärtää sellaisenaan. Muunnoksia ei tarvita sen käyttämiseen.</p>
-	<p>
-		<button>Näytä vain etu- ja sukunimi</button>
-		<button>Näytä kaikki tiedot</button>
-	</p>
-	<p>Kokeillaan seuraavaa. Voit luoda uuden JSON-datasetin JavaScript-koodissasi alla olevan mallin mukaisesti. Luo
-		sitten funktiot, jotka suoritetaan, kun painikkeita klikataan.</p>
-
-	<pre>
+    <pre>
 			var text = '{ "employees" : [' +
 			'{ "firstName":"John" , "lastName":"Doe" },' +
 			'{ "firstName":"Anna" , "lastName":"Smith" },' +
 			'{ "firstName":"Peter" , "lastName":"Jones" } ]}';
-		</pre>
-	<ul>
-		<li>Ensimmäinen painike näyttää etu- ja sukunimen jokaisesta kohteesta alla olevassa divissä.</li>
-		<li>Toinen painike näyttää kaikki tiedot kaikista kohteista alla olevassa divissä. Halutessasi voit käyttää
-			for-silmukoita tässä.</li>
-	</ul>
-	<div id="jsondata">JSON-data näkyy täällä.</div>
-	<hr />
-	<h2>Harjoitus 2: JSONin parsiminen verkosta</h2>
-	<p>Alla näet kaksi painiketta. Muokkaa lähdekoodia ja lisää näihin painikkeisiin onClick-tapahtumat. Lisää
-		toiminnallisuudet alla kuvatulla tavalla.</p>
-	<p>
-		<button>Lataa raaka data</button>
-		<button>Lataa ja parsi data</button>
-	</p>
+		</pre
+    >
+    <ul>
+      <li>
+        Ensimmäinen painike näyttää etu- ja sukunimen jokaisesta kohteesta alla
+        olevassa divissä.
+      </li>
+      <li>
+        Toinen painike näyttää kaikki tiedot kaikista kohteista alla olevassa
+        divissä. Halutessasi voit käyttää for-silmukoita tässä.
+      </li>
+    </ul>
+    <div id="jsondata">JSON-data näkyy täällä.</div>
+    <hr />
 
-	<ul>
-		<li>Ensimmäisen painikkeen tulee suorittaa JavaScript-funktio, joka lataa annetun <a
-				href="http://www.omdbapi.com/?s=star+wars&apikey=cbbc6750">JSON-tiedoston verkosta</a> ja näyttää sen
-			raakatiedot alla olevassa divissä (id=rawdata). Käytä kehittäjätyökaluja (F12) seurataksesi AJAX-kutsua ja
-			tutki otsikoita, suoritus­aikoja jne.</li>
-		<li>Toisen painikkeen tulee suorittaa funktio, joka lataa saman datan, mutta parsii sen ja näyttää tiedot
-			taulukossa.</li>
-		<li>Kun olet saanut datan näkyviin, kokeile ladata myös kuvat sivulle.</li>
-	</ul>
-	<div id="rawdata">Raaka data näkyy täällä.</div>
+    <script>
+      var text =
+        '{ "employees" : [' +
+        '{ "firstName":"John" , "lastName":"Doe" },' +
+        '{ "firstName":"Anna" , "lastName":"Smith" },' +
+        '{ "firstName":"Peter" , "lastName":"Jones" } ]}';
 
-	<hr />
-	<h2>Harjoitus 3: Käytännön haaste: OpenWeatherMap API</h2>
+      var data = JSON.parse(text);
 
-	<p>OpenWeatherMap on tunnettu säädatan tarjoaja verkossa. Se tarjoaa API:n, jonka avulla kehittäjät voivat hakea
-		säätietoja. <a href="https://openweathermap.org/api">Dokumentaatio löytyy täältä</a>.</p>
-	<p>Tehtäväsi on kirjoittaa Sää-sovellus, joka näyttää säätiedot käyttäjän toiveiden mukaan. <b>Huomaa, että sinun
-			täytyy rekisteröityä (ilmaista) saadaksesi API-avaimen, joka mahdollistaa palvelun käytön.</b></p>
+      function naytaNimet() {
+        var tuloste = "";
+        for (var i = 0; i < data.employees.length; i++) {
+          tuloste +=
+            data.employees[i].firstName +
+            " " +
+            data.employees[i].lastName +
+            "<br>";
+        }
+        document.getElementById("jsondata").innerHTML = tuloste;
+      }
 
-	<p>Esimerkkikutsu REST API:iin voisi näyttää tältä: <a
-			href="http://api.openweathermap.org/data/2.5/weather?q=Helsinki&units=metric&mode=JSON&APPID=ff64c247a136f706923d1ee0d55d71e2">http://api.openweathermap.org/data/2.5/weather?q=Helsinki&units=metric&mode=JSON&APPID=ff64c247a136f706923d1ee0d55d71e2</a>.
-		Klikkaa nähdäksesi vastauksen.</p>
-	<ul>
-		<li>Kehitä ensin sovellus, joka näyttää raakatiedot säästä (lämpötila, pilvisyys, ilmankosteus) tietyssä
-			kaupungissa, kun painiketta klikataan. <button>Hae data</button></li>
-		<li>Kun tämä toimii, parsi data ja tulosta se diviin.</li>
-		<li>Tämän jälkeen lisää onchange-tapahtuma pudotusvalikkoon, jotta käyttäjä voi valita, minkä kaupungin tiedot
-			näytetään listalta.</li>
-		<li>Lopuksi lisää toiminnallisuus syötekenttään, johon käyttäjä voi kirjoittaa hakukyselyn, joka lähetetään
-			OpenWeatherMap API:lle ja jonka tulokset näytetään sovelluksessa.</li>
-	</ul>
-	<p>Valitse kaupunki listalta:</p>
-	<select name="mySelect" id="city" onchange="">
-		<option value="Helsinki">Helsinki</option>
-		<option value="Stockholm">Tukholma</option>
-		<option value="Rome">Rooma</option>
-		<option value="New York">New York</option>
-	</select>
-	<p>Tai kirjoita hakusana: <input id="citysearch" /><button id="search">Hae</button></p>
-	<div id="weatherdata">Säätiedot näkyvät täällä.</div>
+      function naytaKaikki() {
+        var tuloste = "";
+        for (var i = 0; i < data.employees.length; i++) {
+          for (var key in data.employees[i]) {
+            tuloste += key + ": " + data.employees[i][key] + "<br>";
+          }
+          tuloste += "<br>";
+        }
+        document.getElementById("jsondata").innerHTML = tuloste;
+      }
+    </script>
 
-</body>
+    <h2>Harjoitus 2: JSONin parsiminen verkosta</h2>
+    <p>
+      Alla näet kaksi painiketta. Muokkaa lähdekoodia ja lisää näihin
+      painikkeisiin onClick-tapahtumat. Lisää toiminnallisuudet alla kuvatulla
+      tavalla.
+    </p>
+    <p>
+      <button onclick="lataaRaakaData()">Lataa raaka data</button>
+      <button onclick="lataaJaParsiData()">Lataa ja parsi data</button>
+    </p>
 
+    <ul>
+      <li>
+        Ensimmäisen painikkeen tulee suorittaa JavaScript-funktio, joka lataa
+        annetun
+        <a href="http://www.omdbapi.com/?s=star+wars&apikey=cbbc6750"
+          >JSON-tiedoston verkosta</a
+        >
+        ja näyttää sen raakatiedot alla olevassa divissä (id=rawdata). Käytä
+        kehittäjätyökaluja (F12) seurataksesi AJAX-kutsua ja tutki otsikoita,
+        suoritus­aikoja jne.
+      </li>
+      <li>
+        Toisen painikkeen tulee suorittaa funktio, joka lataa saman datan, mutta
+        parsii sen ja näyttää tiedot taulukossa.
+      </li>
+      <li>
+        Kun olet saanut datan näkyviin, kokeile ladata myös kuvat sivulle.
+      </li>
+    </ul>
+    <div id="rawdata">Raaka data näkyy täällä.</div>
+
+    <script>
+      const apiUrl = "https://www.omdbapi.com/?s=star+wars&apikey=cbbc6750";
+
+      function lataaRaakaData() {
+        fetch(apiUrl)
+          .then((response) => response.json())
+          .then((data) => {
+            document.getElementById("rawdata").innerText = JSON.stringify(
+              data,
+              null,
+              2
+            );
+          })
+          .catch((error) => {
+            document.getElementById("rawdata").innerText =
+              "Virhe datan latauksessa: " + error;
+          });
+      }
+
+      function lataaJaParsiData() {
+        fetch(apiUrl)
+          .then((response) => response.json())
+          .then((data) => {
+            if (data.Search && data.Search.length > 0) {
+              let html =
+                "<table border='1' cellpadding='5'><tr><th>Otsikko</th><th>Vuosi</th><th>Tyyppi</th><th>Kuva</th></tr>";
+              for (let movie of data.Search) {
+                html += "<tr>";
+                html += "<td>" + movie.Title + "</td>";
+                html += "<td>" + movie.Year + "</td>";
+                html += "<td>" + movie.Type + "</td>";
+                html += "<td><img src='" + movie.Poster + "' width='60'></td>";
+                html += "</tr>";
+              }
+              html += "</table>";
+              document.getElementById("rawdata").innerHTML = html;
+            } else {
+              document.getElementById("rawdata").innerText =
+                "Ei löytynyt tuloksia.";
+            }
+          })
+          .catch((error) => {
+            document.getElementById("rawdata").innerText =
+              "Virhe datan latauksessa: " + error;
+          });
+      }
+    </script>
+
+    <hr />
+    <h2>Harjoitus 3: Käytännön haaste: OpenWeatherMap API</h2>
+
+    <p>
+      OpenWeatherMap on tunnettu säädatan tarjoaja verkossa. Se tarjoaa API:n,
+      jonka avulla kehittäjät voivat hakea säätietoja.
+      <a href="https://openweathermap.org/api">Dokumentaatio löytyy täältä</a>.
+    </p>
+    <p>
+      Tehtäväsi on kirjoittaa Sää-sovellus, joka näyttää säätiedot käyttäjän
+      toiveiden mukaan.
+      <b
+        >Huomaa, että sinun täytyy rekisteröityä (ilmaista) saadaksesi
+        API-avaimen, joka mahdollistaa palvelun käytön.</b
+      >
+    </p>
+
+    <p>
+      Esimerkkikutsu REST API:iin voisi näyttää tältä:
+      <a
+        href="http://api.openweathermap.org/data/2.5/weather?q=Helsinki&units=metric&mode=JSON&APPID=ff64c247a136f706923d1ee0d55d71e2"
+        >http://api.openweathermap.org/data/2.5/weather?q=Helsinki&units=metric&mode=JSON&APPID=ff64c247a136f706923d1ee0d55d71e2</a
+      >. Klikkaa nähdäksesi vastauksen.
+    </p>
+    <ul>
+      <li>
+        Kehitä ensin sovellus, joka näyttää raakatiedot säästä (lämpötila,
+        pilvisyys, ilmankosteus) tietyssä kaupungissa, kun painiketta klikataan.
+        <button onclick="haeSaa()">Hae data</button>
+      </li>
+      <li>Kun tämä toimii, parsi data ja tulosta se diviin.</li>
+      <li>
+        Tämän jälkeen lisää onchange-tapahtuma pudotusvalikkoon, jotta käyttäjä
+        voi valita, minkä kaupungin tiedot näytetään listalta.
+      </li>
+      <li>
+        Lopuksi lisää toiminnallisuus syötekenttään, johon käyttäjä voi
+        kirjoittaa hakukyselyn, joka lähetetään OpenWeatherMap API:lle ja jonka
+        tulokset näytetään sovelluksessa.
+      </li>
+    </ul>
+    <p>Valitse kaupunki listalta:</p>
+    <select name="mySelect" id="city" onchange="haeSaa()">
+      <option value="Helsinki">Helsinki</option>
+      <option value="Stockholm">Tukholma</option>
+      <option value="Rome">Rooma</option>
+      <option value="New York">New York</option>
+    </select>
+    <p>
+      Tai kirjoita hakusana: <input id="citysearch" /><button
+        id="search"
+        onclick="haeSaa()"
+      >
+        Hae
+      </button>
+    </p>
+    <div id="weatherdata">Säätiedot näkyvät täällä.</div>
+
+    <script>
+      // Oma API-avain
+      const apiKey = "08cc5ddc88233b70cd914e2eeec38da8";
+
+      // Pääfunktio, joka hakee säätiedot valitun tai kirjoitetun kaupungin perusteella
+      function haeSaa() {
+        // Haetaan ensin mahdollinen kirjoitettu kaupunki
+        let city = document.getElementById("citysearch").value.trim();
+
+        // Jos hakukenttä on tyhjä, otetaan valittu kaupunki pudotusvalikosta
+        if (city === "") {
+          city = document.getElementById("city").value;
+        }
+
+        // Rakennetaan pyyntö OpenWeatherMap API:lle
+        const url = `https://api.openweathermap.org/data/2.5/weather?q=${city}&units=metric&mode=JSON&APPID=${apiKey}`;
+
+        // Näytetään väliaikainen viesti
+        document.getElementById("weatherdata").innerText =
+          "Ladataan säätietoja...";
+
+        // Haetaan data
+        fetch(url)
+          .then((response) => {
+            if (!response.ok) {
+              throw new Error("Verkkovirhe tai väärä kaupunki!");
+            }
+            return response.json();
+          })
+          .then((data) => {
+            // Tarkistetaan, löytyikö tietoja
+            if (data && data.main) {
+              const html = `
+          <h3>Sää: ${data.name}</h3>
+          <p><b>Lämpötila:</b> ${data.main.temp} °C</p>
+          <p><b>Tuntuu kuin:</b> ${data.main.feels_like} °C</p>
+          <p><b>Kosteus:</b> ${data.main.humidity} %</p>
+          <p><b>Pilvisyys:</b> ${data.clouds.all} %</p>
+          <p><b>Tuulen nopeus:</b> ${data.wind.speed} m/s</p>
+          <p><b>Kuvaus:</b> ${data.weather[0].description}</p>
+          <img src="https://openweathermap.org/img/wn/${data.weather[0].icon}@2x.png" alt="Sääkuvake">
+        `;
+              document.getElementById("weatherdata").innerHTML = html;
+            } else {
+              document.getElementById("weatherdata").innerText =
+                "Ei löydetty säätietoja kaupungille " + city;
+            }
+          })
+          .catch((error) => {
+            document.getElementById("weatherdata").innerText =
+              "Virhe datan haussa: " + error.message;
+          });
+      }
+    </script>
+  </body>
 </html>
