--- a/Projekti 2/index.html
+++ b/Projekti 2/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Music Info App – Last.fm API</title>
+  <title>Artist Info App – Last.fm API</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🎵 Music Info App</h1>
+  <h1>🎵 Artist Info App</h1>
   <p>Hae artistin tietoja ja albumeja Last.fm:stä</p>
 
   <!-- Käyttäjän hakukenttä ja hakupainike -->
